ajout nom dans formulaire

--- a/photographer.html
+++ b/photographer.html
@@ -51,7 +51,9 @@
     <div id="contact_modal" aria-hidden="true">
       <div class="modal" role="dialog" aria-labelledby="contact-title">
         <header>
-          <h2 id="contact-title">Contactez-moi</h2>
+          <h2 id="contact-title">
+            Contactez-moi <span id="photographer-contact-name"></span>
+          </h2>
           <img
             src="assets/icons/close.svg"
             onclick="closeModal()"
