style css formulaire

--- a/photographer.html
+++ b/photographer.html
@@ -53,7 +53,8 @@
       <div class="modal" role="dialog" aria-labelledby="contact-title">
         <header>
           <h2 id="contact-title">
-            Contactez-moi <span id="photographer-contact-name"></span>
+            Contactez-moi <br />
+            <span id="photographer-contact-name"></span>
           </h2>
           <img
             src="assets/icons/close.svg"
